--- a/app/src/main/res/layout/activity_route_search_screen.xml
+++ b/app/src/main/res/layout/activity_route_search_screen.xml
@@ -27,7 +27,7 @@
             android:padding="24dp">
 
             <TextView
-                android:id="@+id/signText"
+                android:id="@+id/routeSearchText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Route Search"
