--- a/app/src/main/res/layout/activity_signup_screen.xml
+++ b/app/src/main/res/layout/activity_signup_screen.xml
@@ -108,16 +108,29 @@
 
     </androidx.cardview.widget.CardView>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="horizontal"
+        android:layout_marginTop="5dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Do you have account?"
+            android:textColor="@color/purple_200"/>
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="8dp"
-        android:text="Do you have account? Login Now"
-        android:textSize="14sp"
-        android:textAlignment="center"
         android:id="@+id/loginsText"
+        android:padding="8dp"
+        android:layout_marginStart="5dp"
+        android:text="Login"
+        android:textSize="14sp"
         android:textColor="@color/purple_200"
-        android:layout_marginTop ="10dp"/>
+        android:textStyle="bold"/>
 
-
+    </LinearLayout>
 </LinearLayout>
