--- a/app/src/main/res/drawable/item_selector.xml
+++ b/app/src/main/res/drawable/item_selector.xml
@@ -2,9 +2,9 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:state_selector ="true"
+        android:state_selected ="true"
         android:color ="@color/white"/>
     <item
-        android:state_selector ="false"
+        android:state_selected ="false"
         android:color ="@color/grey"/>
 </selector>
