--- a/app/src/main/res/layout/activity_payment_details_screen.xml
+++ b/app/src/main/res/layout/activity_payment_details_screen.xml
@@ -32,7 +32,7 @@
                 android:layout_height="wrap_content"
                 android:text="Your Details"
                 android:textAlignment="center"
-                android:textColor="@color/purple_200"
+                android:textColor="@color/teal_700"
                 android:textSize="30sp"
                 android:textStyle="bold" />
 
@@ -94,7 +94,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
                 android:layout_marginTop="30dp"
-                android:backgroundTint="@color/purple_200"
+                android:backgroundTint="@color/teal_700"
                 android:text="Proceed to Pay"
                 android:textSize="18sp"
                 app:cornerRadius="20dp" />
