--- a/app/src/main/res/drawable/bottom_background.xml
+++ b/app/src/main/res/drawable/bottom_background.xml
@@ -3,7 +3,7 @@
     android:shape = "rectangle">
 
     <solid
-        android:color = "@color/purple_200"/>
+        android:color = "@color/teal_700"/>
 
     <corners
         android:radius = "40dp"/>
