--- a/app/src/main/res/drawable/custom_edittext.xml
+++ b/app/src/main/res/drawable/custom_edittext.xml
@@ -6,7 +6,7 @@
 
     <stroke
         android:width="3dp"
-        android:color="@color/purple_200" />
+        android:color="@color/teal_700" />
 
     <corners
         android:radius="20dp"/>
