--- a/app/src/main/res/drawable/item_selector.xml
+++ b/app/src/main/res/drawable/item_selector.xml
@@ -6,5 +6,5 @@
         android:color ="@color/white"/>
     <item
         android:state_selected ="false"
-        android:color ="@color/grey"/>
+        android:color ="#CACACA"/>
 </selector>
