--- a/app/src/main/res/drawable/lavender_border.xml
+++ b/app/src/main/res/drawable/lavender_border.xml
@@ -4,7 +4,7 @@
 
     <stroke
         android:width="1dp"
-        android:color="@color/purple_200"/>
+        android:color="@color/teal_700"/>
 
     <solid
         android:color="@color/black"/>
