--- a/app/src/main/res/layout/activity_navigative.xml
+++ b/app/src/main/res/layout/activity_navigative.xml
@@ -12,6 +12,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/skipButton"
         android:text="Skip"
+        android:backgroundTint="@color/teal_700"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="15dp"
         android:textSize="14sp"
@@ -35,6 +36,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Back"
+        android:backgroundTint="@color/teal_700"
         android:padding="8dp"
         app:cornerRadius="15dp"
         android:textSize="14sp"
@@ -51,6 +53,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Next"
+        android:backgroundTint="@color/teal_700"
         android:padding="8dp"
         app:cornerRadius="15dp"
         android:textSize="14sp"
