--- a/app/src/main/res/layout/activity_route_search_screen.xml
+++ b/app/src/main/res/layout/activity_route_search_screen.xml
@@ -117,19 +117,19 @@
         />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/navBottomBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/navBottomBar"
         android:layout_alignParentBottom="true"
-        android:background="@drawable/bottom_background"
-        android:layout_marginEnd="20dp"
         android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
         android:layout_marginBottom="10dp"
+        android:background="@drawable/bottom_background"
         android:elevation="2dp"
-        app:menu="@menu/bottom_menu"
         app:itemIconSize="30dp"
         app:itemIconTint="@drawable/item_selector"
         app:itemRippleColor="@android:color/transparent"
-        app:labelVisibilityMode="unlabeled"/>
+        app:labelVisibilityMode="unlabeled"
+        app:menu="@menu/bottom_menu" />
 
 </RelativeLayout>
