--- a/app/src/main/res/layout/activity_signup_screen.xml
+++ b/app/src/main/res/layout/activity_signup_screen.xml
@@ -32,7 +32,7 @@
                 android:layout_height="wrap_content"
                 android:text="Sign Up"
                 android:textAlignment="center"
-                android:textColor="@color/purple_200"
+                android:textColor="@color/teal_700"
                 android:textSize="36sp"
                 android:textStyle="bold" />
 
@@ -98,7 +98,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
                 android:layout_marginTop="30dp"
-                android:backgroundTint="@color/purple_200"
+                android:backgroundTint="@color/teal_700"
                 android:text="Sign Up"
                 android:textSize="18sp"
                 app:cornerRadius="20dp" />
@@ -119,7 +119,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Do you have account?"
-            android:textColor="@color/purple_200"/>
+            android:textColor="@color/teal_700"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -129,7 +129,7 @@
         android:layout_marginStart="5dp"
         android:text="Login"
         android:textSize="14sp"
-        android:textColor="@color/purple_200"
+        android:textColor="@color/teal_700"
         android:textStyle="bold"/>
 
     </LinearLayout>
