--- a/app/src/main/res/layout/slider_screen.xml
+++ b/app/src/main/res/layout/slider_screen.xml
@@ -23,7 +23,7 @@
         android:text="Online Booking"
         android:textSize="30dp"
         android:textAlignment="center"
-        android:textColor="@color/purple_200"
+        android:textColor="@color/teal_700"
         android:textStyle="bold"/>
 
     <TextView
@@ -34,7 +34,9 @@
         android:text="@string/screen1Description"
         android:textSize="20sp"
         android:textAlignment="center"
-        android:textColor="@color/purple_200"
+        android:textColor="@color/teal_700"
         android:layout_marginHorizontal="30dp"/>
+
+
 
 </LinearLayout>
