finished account screen

--- a/app/src/main/res/layout/activity_get_started.xml
+++ b/app/src/main/res/layout/activity_get_started.xml
@@ -12,35 +12,36 @@
 
     <ImageView
         android:layout_width="match_parent"
+        android:padding="60sp"
         android:layout_height="300dp"
         android:layout_marginTop="70dp"
-        android:src="@drawable/whatsapp_image_2023_04_06_at_17_46_32"
+        android:src="@drawable/traveltime__4__removebg_preview"
         android:scaleType="centerCrop"/>
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
-        android:text="Easy Payment"
-        android:textSize="30dp"
+        android:text="Welcome To TravelTime"
+        android:textSize="25dp"
         android:textAlignment="center"
-        android:textColor="@color/teal_700"
+        android:textColor="@color/purple_700"
         android:textStyle="bold"/>
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:text="@string/screen2Description"
         android:textSize="20sp"
         android:textAlignment="center"
-        android:textColor="@color/teal_700"
+        android:textColor="@color/black"
         android:layout_marginHorizontal="30dp"/>
 
     <Button
         android:layout_width="180dp"
         android:layout_height="60dp"
         android:text="Get Started"
+        android:textColor="@color/white"
         android:id="@+id/startButton"
         android:backgroundTint="@color/teal_700"
         android:padding="8dp"
