--- a/app/src/main/res/layout/activity_about_app.xml
+++ b/app/src/main/res/layout/activity_about_app.xml
@@ -8,7 +8,7 @@
     android:orientation="vertical"
     android:gravity="center"
     android:background="@color/teal_300"
-    tools:context=".RouteSearchScreen">
+    tools:context=".AboutApp">
 
     <FrameLayout
         android:layout_width="match_parent"
