--- a/app/src/main/res/layout/activity_login_screen.xml
+++ b/app/src/main/res/layout/activity_login_screen.xml
@@ -8,7 +8,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:gravity="center"
-    android:background="@drawable/untitleddd_1"
+    android:background="@color/teal_300"
     tools:context=".LoginScreen">
 
     <androidx.cardview.widget.CardView
@@ -22,7 +22,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="398dp"
             android:layout_gravity="center_horizontal"
             android:orientation="vertical"
             android:padding="24dp">
@@ -36,35 +36,46 @@
                 android:textColor="@color/teal_700"
                 android:textSize="36sp"
                 android:textStyle="bold" />
+
             <EditText
+                android:id="@+id/username"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:id="@+id/username"
+                android:layout_marginTop="40dp"
                 android:background="@drawable/custom_edittext"
                 android:drawableLeft="@drawable/ic_baseline_person_24"
                 android:drawablePadding="8dp"
                 android:hint="Username"
-                android:textColorHint="@color/black"
                 android:padding="8dp"
                 android:textColor="@color/black"
                 android:textColorHighlight="@color/cardview_dark_background"
-                android:layout_marginTop="40dp"/>
+                android:textColorHint="@color/hintColor" />
 
 
             <EditText
+                android:id="@+id/password1"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:id="@+id/password1"
+                android:layout_marginTop="20dp"
                 android:background="@drawable/custom_edittext"
                 android:drawableLeft="@drawable/ic_baseline_lock_24"
                 android:drawablePadding="8dp"
                 android:hint="Password"
-                android:textColorHint="@color/black"
-                android:padding="8dp"
                 android:inputType="textPassword"
+                android:padding="8dp"
                 android:textColor="@color/black"
                 android:textColorHighlight="@color/cardview_dark_background"
-                android:layout_marginTop="20dp"/>
+                android:textColorHint="@color/hintColor" />
+
+            <TextView
+                android:id="@+id/forgotPasswdBtn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end"
+                android:layout_marginTop="5dp"
+                android:layout_marginEnd="20dp"
+                android:text="Forget Password"
+                android:textColor="@color/teal_700" />
 
             <Button
                 android:id="@+id/loginButton"
@@ -73,12 +84,11 @@
                 android:layout_marginTop="30dp"
                 android:backgroundTint="@color/teal_700"
                 android:text="Login"
+                android:textColor="@color/white"
                 android:textSize="18sp"
                 app:cornerRadius="20dp" />
 
-
         </LinearLayout>
-
     </androidx.cardview.widget.CardView>
     <LinearLayout
         android:layout_width="wrap_content"
@@ -91,16 +101,18 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Not yet registered?"
-
         android:textColor="@color/teal_700" />
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/signupText"
         android:layout_marginStart="5dp"
         android:text="Sing up"
+        android:padding="8dp"
         android:textSize="14sp"
-        android:textColor="@color/black"
+        android:textColor="@color/teal_700"
         android:textStyle="bold"/>
+
     </LinearLayout>
 </LinearLayout>
