--- a/app/src/main/res/layout/activity_navigative.xml
+++ b/app/src/main/res/layout/activity_navigative.xml
@@ -12,6 +12,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/skipButton"
         android:text="Skip"
+        android:textColor="@color/white"
         android:backgroundTint="@color/teal_700"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="15dp"
@@ -33,8 +34,8 @@
 
     <Button
         android:id="@+id/backButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="80dp"
+        android:layout_height="50dp"
         android:text="Back"
         android:backgroundTint="@color/teal_700"
         android:padding="8dp"
@@ -50,13 +51,13 @@
 
     <Button
         android:id="@+id/nextButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="80dp"
+        android:layout_height="50dp"
         android:text="Next"
         android:backgroundTint="@color/teal_700"
         android:padding="8dp"
         app:cornerRadius="15dp"
-        android:textSize="14sp"
+        android:textSize="15sp"
         android:layout_marginEnd="15dp"
         android:layout_marginBottom="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
