--- a/app/src/main/res/layout/activity_otpscreen.xml
+++ b/app/src/main/res/layout/activity_otpscreen.xml
@@ -10,7 +10,8 @@
 
     <ImageView
         android:layout_width="match_parent"
-        android:layout_height="250dp"
+        android:layout_height="200dp"
+        android:layout_marginTop="15sp"
         android:adjustViewBounds="true"
         android:src="@drawable/traveltime__4__removebg_preview" />
 
@@ -19,21 +20,20 @@
         android:layout_height="wrap_content"
         android:text="Please enter code that we have sent you?"
         android:gravity="center"
-        android:textColor="#66000000"
+        android:textColor="@color/black"
         android:layout_marginTop="40dp"
         android:layout_marginEnd="20dp"
-        android:layout_marginStart="20dp"
-        />
+        android:layout_marginStart="20dp" />
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Email Address"
         android:textColor="#66000000"
         android:layout_gravity="center"
-        android:textSize="12dp"
-        android:layout_marginTop="10dp"
+        android:textSize="14dp"
+        android:layout_marginTop="10dp" />
 
-        />
     <TextView
         android:id="@+id/otpEmail"
         android:layout_width="wrap_content"
@@ -43,19 +43,17 @@
         android:textColor="#CC000000"
         android:layout_gravity="center"
         android:textSize="16sp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="10dp" />
 
-        />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Mobile Number"
         android:textColor="#66000000"
         android:layout_gravity="center"
-        android:textSize="12dp"
-        android:layout_marginTop="10dp"
+        android:textSize="14dp"
+        android:layout_marginTop="10dp" />
 
-        />
     <TextView
         android:id="@+id/otpMobile"
         android:layout_width="wrap_content"
@@ -65,9 +63,7 @@
         android:textColor="#CC000000"
         android:layout_gravity="center"
         android:textSize="16sp"
-        android:layout_marginTop="10dp"
-
-        />
+        android:layout_marginTop="10dp" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -106,6 +102,7 @@
             android:textSize="30sp"
             android:textStyle="bold"
             android:layout_weight="1"/>
+
         <EditText
             android:id="@+id/OTPbox3"
             android:layout_width="50dp"
@@ -119,6 +116,7 @@
             android:textSize="30sp"
             android:textStyle="bold"
             android:layout_weight="1"/>
+
         <EditText
             android:id="@+id/OTPbox4"
             android:layout_width="50dp"
@@ -132,6 +130,7 @@
             android:textSize="30sp"
             android:textStyle="bold"
             android:layout_weight="1"/>
+
     </LinearLayout>
 
     <androidx.appcompat.widget.AppCompatButton
@@ -142,10 +141,10 @@
         android:layout_marginStart="20dp"
         android:layout_marginTop="40dp"
         android:background="@color/teal_700"
-        android:text="verify"
+        android:text="Verify"
+        android:textSize="20sp"
         android:textAllCaps="false"
-        android:textColor="#ffffff"
-        />
+        android:textColor="#ffffff" />
 
     <LinearLayout
         android:layout_gravity="center"
@@ -171,7 +170,6 @@
             android:textColor="@color/teal_700"
             android:textStyle="bold"
             tools:ignore="HardcodedText" />
-
 
     </LinearLayout>
 </LinearLayout>
