--- a/app/src/main/res/layout/fragment_home2.xml
+++ b/app/src/main/res/layout/fragment_home2.xml
@@ -6,7 +6,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".fragment.HomeFragment">
 
-    <!-- TODO: Update blank fragment layout -->
     <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -40,12 +39,13 @@
                     android:layout_marginTop="40dp"
                     android:background="@drawable/custom_edittext"
                     android:drawableLeft="@drawable/ic_baseline_location_on_24"
+                    android:drawableTint="@color/black"
                     android:drawablePadding="8dp"
                     android:hint="Departure Location"
                     android:padding="8dp"
                     android:textColor="@color/black"
                     android:textColorHighlight="@color/cardview_dark_background"
-                    android:textColorHint="@color/black" />
+                    android:textColorHint="@color/hintColor" />
 
                 <EditText
                     android:layout_width="match_parent"
@@ -55,7 +55,8 @@
                     android:drawableLeft="@drawable/ic_baseline_location_on_24"
                     android:drawablePadding="8dp"
                     android:hint="Arrival Location"
-                    android:textColorHint="@color/black"
+                    android:textColorHint="@color/hintColor"
+                    android:drawableTint="@color/black"
                     android:padding="8dp"
                     android:textColor="@color/black"
                     android:textColorHighlight="@color/cardview_dark_background"
@@ -66,10 +67,11 @@
                     android:layout_height="50dp"
                     android:id="@+id/Travel_Date"
                     android:background="@drawable/custom_edittext"
-                    android:drawableLeft="@drawable/ic_baseline_clear_24"
+                    android:drawableLeft="@drawable/ic_baseline_calendar_today_24"
+                    android:drawableTint="@color/black"
                     android:drawablePadding="8dp"
                     android:hint="Travel Date"
-                    android:textColorHint="@color/black"
+                    android:textColorHint="@color/hintColor"
                     android:padding="8dp"
                     android:textColor="@color/black"
                     android:textColorHighlight="@color/cardview_dark_background"
@@ -81,14 +83,14 @@
                     android:id="@+id/Time"
                     android:background="@drawable/custom_edittext"
                     android:drawableLeft="@drawable/ic_baseline_access_time_24"
+                    android:drawableTint="@color/black"
                     android:drawablePadding="8dp"
                     android:hint="Time"
-                    android:textColorHint="@color/black"
+                    android:textColorHint="@color/hintColor"
                     android:padding="8dp"
                     android:textColor="@color/black"
                     android:textColorHighlight="@color/cardview_dark_background"
                     android:layout_marginTop="40dp"/>
-
 
                 <Button
                     android:id="@+id/searchButton"
@@ -97,14 +99,12 @@
                     android:layout_marginTop="30dp"
                     android:backgroundTint="@color/teal_700"
                     android:text="Search"
+                    android:textColor="@color/white"
                     android:textSize="18sp"
                     app:cornerRadius="20dp" />
-
 
             </LinearLayout>
 
         </androidx.cardview.widget.CardView>
-
-
 
 </FrameLayout>
