--- a/app/src/main/res/layout/slider_screen.xml
+++ b/app/src/main/res/layout/slider_screen.xml
@@ -10,20 +10,21 @@
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="300dp"
+        android:padding="20sp"
         android:id="@+id/sliderImage"
-        android:layout_marginTop="10dp"
-        android:src="@drawable/whatsapp_image_2023_04_06_at_17_55_31"
+        android:layout_marginTop="8dp"
+        android:src="@drawable/zzz"
         android:scaleType="centerCrop"/>
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/sliderTitle"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="20dp"
         android:text="Online Booking"
         android:textSize="30dp"
         android:textAlignment="center"
-        android:textColor="@color/teal_700"
+        android:textColor="@color/black"
         android:textStyle="bold"/>
 
     <TextView
@@ -34,9 +35,7 @@
         android:text="@string/screen1Description"
         android:textSize="20sp"
         android:textAlignment="center"
-        android:textColor="@color/teal_700"
+        android:textColor="@color/black"
         android:layout_marginHorizontal="30dp"/>
-
-
 
 </LinearLayout>
