finished the profile screen

--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -45,7 +45,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                android:text="Lion Fischer"
+                android:text="Udata senevirathne"
                 android:textColor="@color/black"
                 android:textSize="25sp"
                 android:textStyle="bold"
@@ -57,7 +57,7 @@
                 android:id="@+id/textView2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="lionfischer@gmail.com"
+                android:text="Example@gmail.com"
                 android:textColor="@color/black"
                 android:textSize="20sp"
                 app:layout_constraintEnd_toEndOf="@+id/textView"
@@ -83,7 +83,7 @@
                     android:layout_marginTop="10dp"
                     android:layout_marginEnd="32dp"
                     android:layout_marginBottom="10dp"
-                    android:background="@drawable/bg_1"
+                    android:background="@drawable/btn_bg"
                     android:drawableStart="@drawable/list"
                     android:drawableEnd="@drawable/arrow"
                     android:drawablePadding="20dp"
@@ -103,7 +103,7 @@
                     android:layout_marginTop="10dp"
                     android:layout_marginEnd="32dp"
                     android:layout_marginBottom="10dp"
-                    android:background="@drawable/bg_1"
+                    android:background="@drawable/btn_bg"
                     android:drawableStart="@drawable/settings"
                     android:drawableEnd="@drawable/arrow"
                     android:drawablePadding="20dp"
@@ -125,7 +125,7 @@
                     android:layout_marginTop="10dp"
                     android:layout_marginEnd="32dp"
                     android:layout_marginBottom="10dp"
-                    android:background="@drawable/bg_1"
+                    android:background="@drawable/btn_bg"
                     android:drawableStart="@drawable/account"
                     android:drawableEnd="@drawable/arrow"
                     android:drawablePadding="20dp"
@@ -145,7 +145,7 @@
                     android:layout_marginTop="10dp"
                     android:layout_marginEnd="32dp"
                     android:layout_marginBottom="10dp"
-                    android:background="@drawable/bg_1"
+                    android:background="@drawable/btn_bg"
                     android:drawableStart="@drawable/notification"
                     android:drawableEnd="@drawable/arrow"
                     android:drawablePadding="20dp"
@@ -165,7 +165,7 @@
                     android:layout_marginTop="10dp"
                     android:layout_marginEnd="32dp"
                     android:layout_marginBottom="10dp"
-                    android:background="@drawable/bg_1"
+                    android:background="@drawable/btn_bg"
                     android:drawableStart="@drawable/privacy"
                     android:drawableEnd="@drawable/arrow"
                     android:drawablePadding="20dp"
