finished the result screen

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="grey">#808080</color>
     <color name="hintColor"> #808080 </color>
     <color name="teal_300">#B9D6D4</color>
+    <color name="blue">#46E1EF</color>
 </resources>
