finished the redesign the result layout

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,6 @@
     <color name="white">#FFFFFFFF</color>
     <color name="grey">#808080</color>
     <color name="hintColor"> #808080 </color>
-    <color name="teal_300">#B9D6D4</color>
+    <color name="teal_300">#D5DAD9</color>
     <color name="blue">#46E1EF</color>
 </resources>
