finished the user login

--- a/app/src/main/res/layout/activity_signup_screen.xml
+++ b/app/src/main/res/layout/activity_signup_screen.xml
@@ -43,7 +43,7 @@
                 android:background="@drawable/custom_edittext"
                 android:drawableLeft="@drawable/ic_baseline_person_24"
                 android:drawablePadding="8dp"
-                android:hint="First Name"
+                android:hint="First Name."
                 android:textColorHint="@color/hintColor"
                 android:padding="8dp"
                 android:textColor="@color/black"
