finished the route selection

--- a/app/src/main/res/layout/fragment_routes_register.xml
+++ b/app/src/main/res/layout/fragment_routes_register.xml
@@ -42,6 +42,8 @@
                 android:layout_height="45dp"
                 android:hint="Route No"
                 android:textColor="@color/black"
+                android:theme="@style/CardView"
+                android:spinnerMode="dropdown"
                 android:background="@drawable/custom_edittext"
                 android:entries="@array/choices"
                 android:layout_marginTop="25dp"/>
