re structure the code of the result view

--- a/app/src/main/res/layout/result_items.xml
+++ b/app/src/main/res/layout/result_items.xml
@@ -13,7 +13,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:background="@drawable/bg_1"
-        android:layout_height="110dp"
+        android:layout_height="160dp"
         android:clickable="true"
         android:focusable="true"
         android:foreground="?android:attr/selectableItemBackground"
@@ -24,7 +24,7 @@
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_alignParentBottom="true"
-            android:layout_marginBottom="25dp"
+            android:layout_marginBottom="59dp"
             android:src="@drawable/_23456" />
 
         <TextView
@@ -102,6 +102,32 @@
             android:backgroundTint="@color/teal_300"
             android:text="Book" />
 
-    </RelativeLayout>
+        <TextView
+            android:id="@+id/bus_no"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_marginEnd="255dp"
+            android:layout_marginBottom="17dp"
+            android:layout_toStartOf="@+id/op_btn"
+            android:text="Bus No"
+            android:textColor="@color/black" />
 
+        <TextView
+            android:id="@+id/Route_no"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_marginEnd="126dp"
+            android:layout_marginBottom="17dp"
+            android:layout_toStartOf="@+id/op_btn"
+            android:text="Route Number"
+            android:textColor="@color/black" />
+
+    </RelativeLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+    </RelativeLayout>
 </androidx.cardview.widget.CardView>
